@@ -153,24 +153,9 @@ synchronized为什么这么神奇，它到底做了什么呢？下面就进一�
 
 ## 3 Monitor机制
 
-### 3.1 概念
+先来了解两个重要的概念：“Java对象头”、"锁记录"。
 
-**Monitor，常被翻译为“监视器”或者“管程”**。
-
-操作系统在面对进程/线程间同步时，所支持的最重要的同步原语即是semaphore **信号量** 和 mutex **互斥量**。在使用基本的 mutex 进行并发控制时，需要程序员非常小心地控制 mutex 的 down 和 up 操作，否则很容易引起死锁等问题。为了更容易地编写出正确的并发程序，在 mutex 和 semaphore 的基础上，提出了更高层次的同步原语 Monitor。
-
-不过需要注意的是，操作系统本身并不支持 Monitor机制，Monitor是属于编程语言的范畴。例如C语言它就不支持 monitor，Java 语言支持 Monitor。Java对象则是天生的Monitor，每一个Java对象都有成为Monitor的“潜质”。这是为什么呢？
-
-因为在Java的设计中，每一个对象自打娘胎里出来，就带了一把看不见的锁，通常我们叫**“内部锁”，或者“Monitor锁”**，或者“Intrinsic lock”。有了这个锁的帮助，**只要把类的对象方法或者代码块用synchronized关键字修饰，就会先获取到与 synchronized 关键字绑定在一起的 Object 的对象锁**，这个锁会限定其它线程进入与这个锁相关的synchronized 代码区域。而这个对象锁，也就是一个货真价实的Monitor。
-
-因此，可以把Monitor模糊地理解为一种同步工具，也可以理解是一种同步机制，它通常被描述为一个对象。其主要特点有：
-
-- 对象的所有方法都被“互斥”的执行。也就是说，同一个时刻，只有一个 进程/线程 能进入 Monitor 中定义的临界区。
-- 通常提供singal机制。即允许正持有“许可”的线程暂时放弃“许可”，等待某个谓词成真（条件变量），而条件成立后，当前进程可以“通知”正在等待这个条件变量的线程，让他可以重新去获得运行许可。
-
-在了解Monitor原理之前，我们先来了解两个重要的概念：对象头与锁记录。
-
-### 3.2 Java对象头
+### 3.1 Java对象头
 
 [对象实例化内存布局与访问定位](https://blog.csdn.net/KAIZ_LEARN/article/details/109281030)中描述了，JVM中对象内存布局主要分为三块区域：对象头区、实例数据区和填充区。
 
@@ -194,9 +179,9 @@ synchronized为什么这么神奇，它到底做了什么呢？下面就进一�
 
 ![](https://img-blog.csdnimg.cn/20201026155937989.png#pic_center)
 
-### 3.3 锁记录
+### 3.2 锁记录
 
-在线程进入同步代码块的时候，如果此**同步对象没有被锁定，即它的锁标志位是01**，则虚拟机首先在当前线程的栈中创建我们称之为**“锁记录（Lock Record）”**的空间，用于存储锁对象的Mark Word的拷贝，官方把这个拷贝称为Displaced Mark Word。整个Mark Word及其拷贝至关重要。
+在线程进入同步代码块的时候，如果此**同步对象没有被锁定，它的锁标志位是01**，则虚拟机首先在当前线程的栈中创建我们称之为**“锁记录（Lock Record）”**的空间，用于存储锁对象的Mark Word的拷贝，官方把这个拷贝称为Displaced Mark Word。整个Mark Word及其拷贝至关重要。
 
 **Lock Record是线程私有的数据结构**，每一个线程都有一个可用Lock Record列表，同时还有一个全局的可用列表。**每一个被锁住的对象Mark Word都会和一个Lock Record关联**（对象头的Mark Word中的Lock Word指向Lock Record的起始地址），同时**Lock Record中有一个Owner字段存放拥有该锁的线程的唯一标识**（或者`object mark word`），表示该锁被这个线程占用。
 
@@ -209,20 +194,22 @@ synchronized为什么这么神奇，它到底做了什么呢？下面就进一�
 | HashCode    | 保存从对象头拷贝过来的HashCode值（可能还包含GC age）。       |
 | Candidate   | 用来避免不必要的阻塞或等待线程唤醒，因为每一次只有一个线程能够成功拥有锁，如果每次前一个释放锁的线程唤醒所有正在阻塞或等待的线程，会引起不必要的上下文切换（从阻塞到就绪然后因为竞争锁失败又被阻塞）从而导致性能严重下降。Candidate只有两种可能的值0表示没有需要唤醒的线程1表示要唤醒一个继任线程来竞争锁 |
 
-### 3.4 Monitor原理
+### 3.3 Monitor原理
 
-每个Java对象都可以关联一个Monitor，如果使用`synchronized`给对象上锁（重量级），该对象头的Mark Word中就被设置为指向Monitor对象的指针。
+**Monitor，常被翻译为“监视器”或者“管程”**。
 
-![](https://img-blog.csdnimg.cn/20201026000053726.png)
+操作系统在面对进程/线程间同步时，所支持的最重要的同步原语即是semaphore **信号量** 和 mutex **互斥量**。在使用基本的 mutex 进行并发控制时，需要程序员非常小心地控制 mutex 的 down 和 up 操作，否则很容易引起死锁等问题。为了更容易地编写出正确的并发程序，在 mutex 和 semaphore 的基础上，提出了更高层次的同步原语 Monitor。
 
-* 当一个线程需要获取 Object 的锁时，会被放入 EntrySet 中进行等待（enter）。
-* 如果该线程获取到了锁（acquire），成为当前锁的 Owner。
-* 如果根据程序逻辑，一个已经获得了锁的线程缺少某些外部条件，而无法继续进行下去（例如生产者发现队列已满或者消费者发现队列为空），那么该线程可以通过调用 wait 方法将锁释放（release），进入 Wait Set 中阻塞（BLOCKED）进行等待。
-* 其它线程在这个时候有机会获得锁，从而使得之前不成立的外部条件成立，这样先前被阻塞的线程就可以重新进入 EntrySet 去竞争锁（acquire）。这个外部条件在 Monitor 机制中称为条件变量。
+不过需要注意的是，操作系统本身并不支持 Monitor机制，Monitor是属于编程语言的范畴。例如C语言它就不支持 monitor，Java 语言支持 Monitor。Java对象则是天生的Monitor，每一个Java对象都有成为Monitor的“潜质”。这是为什么呢？
 
-==(与上文逻辑断层)==
+因为在Java的设计中，每一个对象自打娘胎里出来，就带了一把看不见的锁，通常我们叫**“内部锁”，或者“Monitor锁”**，或者“Intrinsic lock”。有了这个锁的帮助，**只要把类的对象方法或者代码块用synchronized关键字修饰，就会先获取到与 synchronized 关键字绑定在一起的 Object 的对象锁**，这个锁会限定其它线程进入与这个锁相关的synchronized 代码区域。而这个对象锁，也就是一个货真价实的Monitor。
 
-**MarkWord锁标识位为10，其中指针指向的是Monitor对象的起始地址**。在Java虚拟机（HotSpot）中，**Monitor是由ObjectMonitor实现的**，其主要数据结构如下（位于HotSpot虚拟机源码objectMonitor.hpp文件，C++实现的）：
+因此，可以把Monitor理解为一种同步工具，也可以理解是一种同步机制，它通常被描述为一个对象。其主要特点有：
+
+- 对象的所有方法都被“互斥”的执行。也就是说，同一个时刻，只有一个 进程/线程 能进入 Monitor 中定义的临界区。
+- 通常提供singal机制。即允许正持有“许可”的线程暂时放弃“许可”，等待某个谓词成真（条件变量），而条件成立后，当前进程可以“通知”正在等待这个条件变量的线程，让他可以重新去获得运行许可。
+
+使用`synchronized`给对象上锁时，该对象头的Mark Word中就被设置为指向Monitor对象的指针。**Mark Word锁标识位为10，其中指针指向的是Monitor对象的起始地址**。在Java虚拟机（HotSpot）中，**Monitor是由ObjectMonitor实现的**，其主要数据结构如下（位于HotSpot虚拟机源码objectMonitor.hpp文件，C++实现的）：
 
 ```java
   // initialize the monitor, exception the semaphore, all other fields
@@ -248,7 +235,18 @@ synchronized为什么这么神奇，它到底做了什么呢？下面就进一�
   }
 ```
 
-从字节码角度分析 Monitor原理：
+ObjectMonitor中有两个队列，**_WaitSet 和 _EntryList**，用来保存ObjectWaiter对象列表（ **每个等待锁的线程都会被封装成ObjectWaiter对象** ），**_owner指向持有ObjectMonitor对象的线程**，当多个线程同时访问一段同步代码：
+
+![](https://img-blog.csdnimg.cn/20201026000053726.png)
+
+* 线程需要获取 Object 的锁时，会被放入 EntrySet（入口区） 中进行等待（enter）。
+* 如果该线程获取到了锁（acquire），成为当前锁的 Owner。
+* 如果根据程序逻辑，一个已经获得了锁的线程缺少某些外部条件，而无法继续进行下去（例如生产者发现队列已满或者消费者发现队列为空），那么该线程可以通过调用 wait 方法将锁释放（release），进入 Wait Set （等待区）中阻塞（BLOCKED）进行等待。
+* 其它线程在这个时候有机会获得锁，从而使得之前不成立的外部条件成立，这样先前被阻塞的线程就可以重新进入 EntrySet 去竞争锁（acquire）。这个外部条件在 Monitor 机制中称为**条件变量**。
+
+> Tips：由于进入等待区只有号入口，由此可以推断，一个线程只有在持有监视器时才能执行wait操作，处于等待的线程只有再次获得监视器才能退出等待状态。
+
+下面再从字节码角度理解一下Monitor原理：
 
 ```java
 public class Test {
@@ -263,7 +261,7 @@ public class Test {
 }
 ```
 
-使用javap 命令反编译class文件： `javap -v 类名.class`
+使用javap 命令反编译class文件： `javap -v Test.class`
 
 ```java
 public static void main(java.lang.String[]);
@@ -304,82 +302,220 @@ public static void main(java.lang.String[]);
 	  --- omit ---
 ```
 
-> Tips： synchronized用在方法上时不会在字节码指令中体现出来。
+执行同步代码块后首先要先执行**monitorenter**指令，退出的时候**monitorexit**指令。
 
-## 4 synchronized进阶
+通过分析之后可以看出，使用Synchronized进行同步，其关键就是必须要对对象的监视器monitor进行获取，当线程获取monitor后才能继续往下执行，否则就只能等待。而这个获取的过程是**互斥**的，即同一时刻只有一个线程能够获取到monitor。过程大致如下：
 
-在JDK 1.6之前，监视器锁可以认为直接对应底层操作系统中的互斥量（mutex）。这种同步方式的成本非常高，包括系统调用引起的内核态与用户态切换、线程阻塞造成的线程切换等。因此，后来称这种锁为“重量级锁”。
+> 1. 如果monitor的进入数为0，则该线程进入monitor，然后将进入数设置为1，该线程即为monitor的所有者；
+>
+> 2. 如果线程已经占有该monitor，如果重新进入，则进入monitor的进入数加1（锁的重入性）；
+>
+> 3. 如果其他线程已经占用了monitor，则该线程进入阻塞状态，直到monitor的进入数为0，再重新尝试获取monitor的所有权。
 
-Java SE 1.6为了减少获得锁和释放锁带来的性能消耗，引入了“偏向锁”和“轻量级锁”，在Java SE 1.6中，锁一共有4种状态，级别从低到高依次是：无锁状态、偏向锁状态、轻量级锁状态和重量级锁状态，这几个状态会随着竞争情况逐渐升级。锁可以升级但不能降级，意味着偏向锁升级成轻量级锁后不能降级成偏向锁。这种锁升级却不能降级的策略，目的是为了提高获得锁和释放锁的效率。
+monitorexit指令执行时，monitor的进入数减1，如果减1后进入数为0，那线程退出monitor，不再是这个monitor的所有者。其他被这个monitor阻塞的线程可以尝试去获取这个 monitor 的所有权。
 
-### 4.1 轻量级锁
+> 上面案例中，monitorexit指令出现了两次，第1次为同步正常退出释放锁；第2次为发生异步退出释放锁。
 
-轻量级锁的使用场景是：如果一个对象虽然有多个线程要对它进行加锁，但是加锁的时间是错开的（也就是没有人可以竞争的），那么可以使用轻量级锁来进行优化。
+通过上面两段描述，我们应该能很清楚的看出Synchronized的实现原理，**Synchronized的语义底层是通过一个monitor的对象来完成**。
 
-轻量级锁对使用者是透明的，即语法仍然是`synchronized`。
+需要注意的是，**synchronized用在同步方法上时，字节码指令中不会出现monitorenter和monitorexit指令**。
 
-假设有两个方法同步块，利用同一个对象加锁
+例如：
 
 ```java
-static final Object obj = new Object();
-public static void method1() {
-     synchronized( obj ) {
-         // 同步块 A
-         method2();
-     }
-}
-public static void method2() {
-     synchronized( obj ) {
-         // 同步块 B
-     }
+public class Test1 {
+    public synchronized void method() {
+        System.out.println("Hello World!");
+    }
 }
 ```
 
-1. 每次指向到synchronized代码块时，都会创建锁记录（Lock Record）对象，每个线程都会包括一个锁记录的结构，锁记录内部可以储存对象的Mark Word和对象引用reference
-   1. ![1583755737580](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309200902-382362.png)
-2. 让锁记录中的Object reference指向对象，并且尝试用cas(compare and sweep)替换Object对象的Mark Word ，将Mark Word 的值存入锁记录中
-   1. ![1583755888236](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309201132-961387.png)
-3. 如果cas替换成功，那么对象的对象头储存的就是锁记录的地址和状态01，如下所示
-   1. ![1583755964276](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309201247-989088.png)
-4. 如果cas失败，有两种情况
-   1. 如果是其它线程已经持有了该Object的轻量级锁，那么表示有竞争，将进入锁膨胀阶段
-   2. 如果是自己的线程已经执行了synchronized进行加锁，那么那么再添加一条 Lock Record 作为重入的计数
-      1. ![1583756190177](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309201634-451646.png)
-5. 当线程退出synchronized代码块的时候，**如果获取的是取值为 null 的锁记录 **，表示有重入，这时重置锁记录，表示重入计数减一
-   1. ![1583756357835](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309201919-357425.png)
-6. 当线程退出synchronized代码块的时候，如果获取的锁记录取值不为 null，那么使用cas将Mark Word的值恢复给对象
-   1. 成功则解锁成功
-   2. 失败，则说明轻量级锁进行了锁膨胀或已经升级为重量级锁，进入重量级锁解锁流程
+使用javap 命令反编译class文件：`javap -v Test1.class`
 
-### 4.2 锁膨胀
+```java
+public synchronized void method();
+    descriptor: ()V
+    flags: ACC_PUBLIC, ACC_SYNCHRONIZED
+    Code:
+      stack=2, locals=1, args_size=1
+         0: getstatic     #2                  // Field java/lang/System.out:Ljava/io/PrintStream;
+         3: ldc           #3                  // String Hello World!
+         5: invokevirtual #4                  // Method java/io/PrintStream.println:(Ljava/lang/String;)V
+         8: return
+      LineNumberTable:
+        line 11: 0
+        line 12: 8
+	--- omit ---
+```
 
-如果在尝试加轻量级锁的过程中，cas操作无法成功，这是有一种情况就是其它线程已经为这个对象加上了轻量级锁，这是就要进行锁膨胀，将轻量级锁变成重量级锁。
+方法的同步并没有通过指令 **`monitorenter`** 和 **`monitorexit`** 来完成，不过相对于普通方法，其常量池中多了 **`ACC_SYNCHRONIZED`** 标示符。**JVM就是根据该标示符来实现方法的同步的**：
 
-1. 当 Thread-1 进行轻量级加锁时，Thread-0 已经对该对象加了轻量级锁
+> 当方法调用时，**调用指令将会检查方法的 ACC_SYNCHRONIZED 访问标志是否被设置**，如果设置了，**执行线程将先获取monitor**，获取成功之后才能执行方法体，**方法执行完后再释放monitor**。在方法执行期间，其他任何线程都无法再获得同一个monitor对象。
 
-   ![1583757433691](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309203715-909034.png)
-2. 这时 Thread-1 加轻量级锁失败，进入锁膨胀流程
+两种同步方式本质上没有区别，只是方法的同步是一种隐式的方式来实现，无需通过字节码来完成**。两个指令的执行是JVM通过调用操作系统的互斥原语mutex来实现**，被阻塞的线程会被挂起、等待重新调度，会导致“用户态和内核态”两个态之间来回切换。
 
-   即为对象申请Monitor锁，让Object指向重量级锁地址，然后自己进入Monitor 的EntryList 变成BLOCKED状态
+## 4 synchronized进阶
 
-   ![1583757586447](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309203947-654193.png)
-3. 当Thread-0 推出synchronized同步块时，使用cas将Mark Word的值恢复给对象头，失败，那么会进入重量级锁的解锁过程，即按照Monitor的地址找到Monitor对象，将Owner设置为null，唤醒EntryList 中的Thread-1线程
+在JDK 6之前，synchronized通过Monitor来实现线程同步，Monitor可以认为直接对应底层操作系统中的互斥量（mutex）。这种同步方式的成本非常高，包括系统调用引起的内核态与用户态切换、线程阻塞造成的线程切换等。因此，后来称这种锁为“重量级锁”。
 
-### 4.3 自旋优化
+JDK 6为了减少获得锁和释放锁带来的性能消耗，引入了“偏向锁”和“轻量级锁”。所以，目前锁一共有4种状态，级别从低到高依次是：**无锁状态、偏向锁状态、轻量级锁状态和重量级锁状态**，这几个状态会随着竞争情况逐渐升级。**锁可以升级但不能降级**，意味着偏向锁升级成轻量级锁后不能降级成偏向锁。这种锁升级却不能降级的策略，目的是为了提高获得锁和释放锁的效率。
 
-重量级锁竞争的时候，还可以使用自旋来进行优化，如果当前线程自旋成功（即在自旋的时候持锁的线程释放了锁），那么当前线程就可以不用进行上下文切换就获得了锁。
+![](https://img-blog.csdnimg.cn/20201027235703700.png)
 
-自旋重试成功的情况
+在了解各种锁状态之前，先来看一个重要的概念，“CAS”。
 
-![1583758113724](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309204835-425698.png)
+### 4.1 CAS
 
-自旋重试失败的情况，自旋了一定次数还是没有等到持锁的线程释放锁
+CAS全称 **Compare And Swap（比较与交换）**，是一种无锁算法。在不使用锁（没有线程被阻塞）的情况下实现多线程之间的变量同步。
 
-![1583758136650](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309204915-424942.png)
+CAS算法涉及到三个操作数：
 
-自旋会占用 CPU 时间，单核 CPU 自旋就是浪费，多核 CPU 自旋才能发挥优势。在 Java 6 之后自旋锁是自适应的，比如对象刚刚的一次自旋操作成功过，那么认为这次自旋成功的可能性会高，就多自旋几次；反之，就少自旋甚至不自旋，总之，比较智能。Java 7 之后不能控制是否开启自旋功能
+- 需要读写的内存值 V。
+- 进行比较的值 A。
+- 要写入的新值 B。
+
+当且仅当 V 的值等于 A 时，CAS通过原子方式用新值B来更新V的值（“比较+更新”整体是一个原子操作），否则不会执行任何操作。一般情况下，“更新”是一个不断重试的操作。
+
+进入原子类AtomicInteger的源码，看一下AtomicInteger的定义：
+
+```java
+public class AtomicInteger extends Number implements java.io.Serializable {
+    private static final long serialVersionUID = 6214790243416807050L;
+
+    // 获取并操作内存的数据。
+    private static final Unsafe unsafe = Unsafe.getUnsafe();
+    // 存储value在AtomicInteger中的偏移量。
+    private static final long valueOffset;
+
+    static {
+        try {
+            valueOffset = unsafe.objectFieldOffset
+                (AtomicInteger.class.getDeclaredField("value"));
+        } catch (Exception ex) { throw new Error(ex); }
+    }
+	
+    // 存储AtomicInteger的int值，该属性需要借助volatile关键字保证其在线程间是可见的。
+    private volatile int value;
+```
+
+接下来，我们查看AtomicInteger的自增函数incrementAndGet()的源码时，发现自增函数底层调用的是unsafe.getAndAddInt()。
+
+```java
+    // AtomicInteger 自增方法
+    public final int incrementAndGet() {
+      return unsafe.getAndAddInt(this, valueOffset, 1) + 1;
+    }    
+
+	// Unsafe.class
+	public final int getAndAddInt(Object var1, long var2, int var4) {
+        int var5;
+        do {
+            var5 = this.getIntVolatile(var1, var2);
+        } while(!this.compareAndSwapInt(var1, var2, var5, var5 + var4));
+
+        return var5;
+    }
+```
+
+`compareAndSwapInt`这个函数，它也是`CAS`缩写的由来。通过OpenJDK 8 来查看Unsafe.cpp的源码：
+
+```java
+// Unsafe.java
+public final int getAndAddInt(Object o, long offset, int delta) {
+   int v;
+   do {
+       v = getIntVolatile(o, offset);
+   } while (!compareAndSwapInt(o, offset, v, v + delta));
+   return v;
+}
+```
+
+根据OpenJDK 8的源码我们可以看出，getAndAddInt()循环获取给定对象o中的偏移量处的值v，然后判断内存值是否等于v。如果相等则将内存值设置为 v + delta，否则返回false，继续循环进行重试，直到设置成功才能退出循环，并且将旧值返回。整个“比较+更新”操作封装在compareAndSwapInt()中，在JNI里是借助于一个CPU指令完成的，属于原子操作，可以保证多个线程都能够看到同一个变量的修改值。
+
+后续JDK通过CPU的cmpxchg指令，去比较寄存器中的 A 和 内存中的值 V。如果相等，就把要写入的新值 B 存入内存中。如果不相等，就将内存值 V 赋值给寄存器中的值 A。然后通过Java代码中的while循环再次调用cmpxchg指令进行重试，直到设置成功为止。
+
+### 4.2 自旋
+
+#### 4.2.1 自旋锁
+
+**线程的阻塞和唤醒需要CPU从用户态切转为核心态**，而且这种切换不易优化。如果锁的粒度很小，即锁持有的时间很短的时候。由锁竞争造成频繁地阻塞和唤醒线程就显得非常不值得，因此引入了自旋锁。
+
+**自旋锁可以减少线程阻塞造成的线程切换**。其执行步骤如下：
+
+* 当前线程尝试去竞争锁。
+* 竞争失败，准备阻塞自己。
+* 但是并没有阻塞自己，进入自旋状态（空等待，比如一个空的有限for循环）。
+* 自旋状态下，继续竞争锁。
+* 如果自旋期间成功获取锁，那么结束自旋状态，否则进入阻塞状态。
+
+> **如果在自旋期间成功获取锁，那么就减少一次线程的切换。**
+
+可见，如果持有锁的线程很快就释放了锁，那么自旋的效率就非常好，反之，自旋的线程就会白白消耗掉处理的资源。**所以自旋锁适合在持有锁时间短，并且竞争不激烈的场景下使用。**
+
+在JDK1.6中自旋锁默认开启。可以使用`-XX:+UseSpinning`开启，`-XX:-UseSpinning`关闭自旋锁优化。
+
+自旋的默认次数为10次，可以使用`-XX:preBlockSpin`参数修改默认的自旋次数。
+
+#### 4.2.2 适应性自旋锁
+
+适应性自旋，是赋予了自旋一种学习能力，它并不固定自旋10次一下。他可以根据它前面线程的自旋情况，从而调整它的自旋。
+
+例如，线程总是自旋成功，那么虚拟机就会允许自旋等待持续的次数更多。反之，如果对于某个锁，很少有自旋能够成功，那么在以后要或者这个锁的时候自旋的次数会减少甚至省略掉自旋过程，以免浪费处理器资源。
+
+### 4.3  锁消除与锁粗化
+
+#### 4.3.1 锁消除
+
+JVM对不会存在线程安全的锁进行锁消除。例如使用JDK的内置API，如StringBuffer、Vector、HashTable等时，会存在隐形的加锁操作。
+
+```java
+public void vectorTest(){
+    Vector<String> vector = new Vector<String>();
+    for(int i = 0 ; i < 10 ; i++){
+        vector.add(i + "");
+    }
+
+    System.out.println(vector);
+}
+```
+
+运行这段代码时，JVM可以明显检测到变量vector没有逃逸出方法vectorTest()之外，所以JVM可以大胆地将vector内部的加锁操作消除。
+
+> 锁消除的依据是逃逸分析的数据支持。
+
+#### 4.3.2 锁粗化
+
+在遇到一连串地对同一锁不断进行请求和释放的操作时，把所有的锁操作整合成锁的一次请求，从而减少对锁的请求同步次数，这个操作叫做锁的粗化。
+
+例如：
+
+```java
+    for(int i = 0 ; i < 10 ; i++){
+		synchronized(lock){
+            // 同步块 
+    	}
+    }
+```
+
+锁粗化后：
+
+```java
+    synchronized(lock){
+        for(int i = 0 ; i < 10 ; i++){
+           // 同步块 
+        }
+    }
+```
 
 ### 4.4 偏向锁
+
+在大多数情况下，锁不仅不存在多线程竞争，而且总是由同一线程多次获得，为了减少此类情况下线程获得锁的性能消耗，JDK6中引进了偏向锁。
+
+当一个线程访问同步代码块并获取锁时，会在Mark Word里存储锁偏向的线程ID。在线程进入和退出同步块时不再通过CAS操作来加锁和解锁，而是检测Mark Word里是否存储着指向当前线程的偏向锁。引入偏向锁是为了在无多线程竞争的情况下尽量减少不必要的轻量级锁执行路径，因为轻量级锁的获取及释放依赖多次CAS原子指令，而偏向锁只需要在置换ThreadID的时候依赖一次CAS原子指令即可。
+
+偏向锁只有遇到其他线程尝试竞争偏向锁时，持有偏向锁的线程才会释放锁，线程不会主动释放偏向锁。偏向锁的撤销，需要等待全局安全点（在这个时间点上没有字节码正在执行），它会首先暂停拥有偏向锁的线程，判断锁对象是否处于被锁定状态。撤销偏向锁后恢复到无锁（标志位为“01”）或轻量级锁（标志位为“00”）的状态。
+
+偏向锁在JDK 6及以后的JVM里是默认启用的。可以通过JVM参数关闭偏向锁：-XX:-UseBiasedLocking=false，关闭之后程序默认会进入轻量级锁状态。
 
 在轻量级的锁中，我们可以发现，如果同一个线程对同一个对象进行重入锁时，也需要执行CAS操作，这是有点耗时滴，那么java6开始引入了偏向锁的东东，只有第一次使用CAS时将对象的Mark Word头设置为入锁线程ID，**之后这个入锁线程再进行重入锁时，发现线程ID是自己的，那么就不用再进行CAS了**
 
@@ -499,7 +635,47 @@ public static void method2() {
 
 如果对象被多个线程访问，但是没有竞争，这时候偏向了线程一的对象又有机会重新偏向线程二，即可以不用升级为轻量级锁，可这和我们之前做的实验矛盾了呀，其实要实现重新偏向是要有条件的：就是超过20对象对同一个线程如线程一撤销偏向时，那么第20个及以后的对象才可以将撤销对线程一的偏向这个动作变为将第20个及以后的对象偏向线程二。Test21.java
 
-### 4.5 锁消除
+### 4.5 轻量级锁
+
+轻量级锁的使用场景：多个线程使用锁的时间是错开的，相当于没有竞争。轻量级锁对使用者是透明的，即语法仍然是`synchronized`。
+
+例如有两个方法同步块，利用同一个对象加锁：
+
+```java
+static final Object obj = new Object();
+public static void method1() {
+     synchronized( obj ) {
+         // 同步块 A
+         method2();
+     }
+}
+public static void method2() {
+     synchronized( obj ) {
+         // 同步块 B
+     }
+}
+```
+
+1. 每次指向到synchronized代码块时，都会创建锁记录（Lock Record）对象，每个线程都会包括一个锁记录的结构，锁记录内部可以储存对象的Mark Word和对象引用reference。![1583755737580](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309200902-382362.png)
+2. 让锁记录中的Object reference指向对象，并且尝试用cas(compare and sweep)替换Object对象的Mark Word ，将Mark Word 的值存入锁记录中
+   1. ![1583755888236](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309201132-961387.png)
+3. 如果cas替换成功，那么对象的对象头储存的就是锁记录的地址和状态01，如下所示
+   1. ![1583755964276](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309201247-989088.png)
+4. 如果cas失败，有两种情况
+   1. 如果是其它线程已经持有了该Object的轻量级锁，那么表示有竞争，将进入锁膨胀阶段
+   2. 如果是自己的线程已经执行了synchronized进行加锁，那么那么再添加一条 Lock Record 作为重入的计数
+      1. ![1583756190177](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309201634-451646.png)
+5. 当线程退出synchronized代码块的时候，**如果获取的是取值为 null 的锁记录 **，表示有重入，这时重置锁记录，表示重入计数减一
+   1. ![1583756357835](https://gitee.com/gu_chun_bo/picture/raw/master/image/20200309201919-357425.png)
+6. 当线程退出synchronized代码块的时候，如果获取的锁记录取值不为 null，那么使用cas将Mark Word的值恢复给对象
+   1. 成功则解锁成功
+   2. 失败，则说明轻量级锁进行了锁膨胀或已经升级为重量级锁，进入重量级锁解锁流程
+
+### 4.6 重量级锁
+
+### 4.7 锁膨胀/锁升级
+
+![](https://img-blog.csdnimg.cn/20201028011119984.png)
 
 ## 5 wait和notify
 
